<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:orientation="vertical">
    <CheckBox android:id="@+id/prefs_ckbx"
              android:text="@string/private_ckbx"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:textSize="20sp"/>
    <CheckBox android:id="@+id/prefs_ckbx_wifi"
              android:text="@string/wifi_ckbx"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="false"
              android:textSize="20sp"/>
    <TextView android:text="@string/sync_interval"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="20sp"/>
    <Spinner android:id="@+id/spinner1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
            />
    <TextView android:text="@string/tags_edit"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="20sp"/>
    <EditText android:id="@+id/prefs_tags"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:lines="3"
              android:gravity="top"
              android:textSize="20sp"
            />
    <Button android:text="@string/save"
            android:id="@+id/prefs_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>